--- a/Day01/Day01.csproj
+++ b/Day01/Day01.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Input\Input.csproj" />
+  </ItemGroup>
+
 </Project>
